# pxlProof

./: README.md
backend/: Dockerfile  README.md  Technical_implementation.md  docker-compose.yml  pyproject.toml
backend/app/: callSC.py  main.py
backend/experiments/: hash.py  ssim.py  zkp.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/header/: Header.css  Header.tsx
frontend/src/pages/Home/: Home.css  Home.tsx
frontend/src/services/: api.ts
smartContract/: callSC.py  storage.sol  test.json
